Used scoped and global styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
-const pageTitle = "My First Astro Site";
+import '../styles/global.css';
 
+const pageTitle = "My First Astro Site";
 ---
 
 <html lang="en">
